# timing

./: .env  .gitignore  ANALYSIS_BOLLYDOG_FIT.md  ARCHITECTURE.md  __init__.py  backtest.toml  backtest_b.toml  batch_config.toml  commands.py  config.toml  config.yaml  config_backtest.toml  config_computation.toml  config_integration.toml  findings.md  main.py  progress.md  pyproject.toml  task_plan.md
adapters/: __init__.py  duckdb.py  sqlite.py
analysis/: __init__.py  app.py  command.py  config.py  engine.py  fibonacci.py  models.py  protocol.py  swing.py  touch.py  types.py
bollydog/: bootstrap.py  cli.py  exception.py  globals.py  logging.py
common/: __init__.py  clock.py  component.py  metrics.py  plot.py
computation/: app.py  command.py  reader.py  writer.py
dashboard/: app.py  commands.py  models.py
data/: __init__.py  app.py  cache.py  command.py  config.py  engine.py  kline.py  models.py  source.py  types.py
decision/: app.py  command.py  runner.py  writer.py
docs/: 00-scenarios.md  00-system-overview.md  01-data-layer.md  01-sequence.md  02-analysis-layer.md  02-interfaces.md  03-execution-layer.md  04-engine-layer.md  04-skeleton.md  05-data-models.md  07-trace-examples.md  08-design-audit.md  99-issues.md  A0-scenarios.md  A1-sequence-diagrams.md  A2-interface-contracts.md  A2a-analysis-impl.md  A2b-strategy-impl.md  A2c-execution-impl.md  A2d-engine-impl.md  A3-data-models.md  ANALYSIS_BOLLYDOG_FIT.md  ARCHITECTURE.md  REGISTRY.md  SKILL.md  design.md  grafana-experiment-viewer.md  grafana.md  issues.md  references.md  research.md  todo.md
(+191 files in other folders)
