[project]
name = "timing"
version = "0.1.0"
description = "交易系统首期：斐波那契回撤 + 触线，基于 bollydog"
requires-python = "==3.12.8"
dependencies = [
    "pydantic==2.12.5",
    "duckdb==1.5.1",
    "pandas>=3.0.2",
    "plotly>=6.7.0",
    "aiosqlite>=0.22.1",
    "duckdb-engine>=0.17.0",
    "ipywidgets>=8.1.8",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"

[dependency-groups]
dev = [
    "pytest>=9.0.3",
    "pytest-asyncio>=1.4.0",
]
